fix: letter spacing

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -133,4 +133,5 @@ body {
   max-width: 25.6rem;
   margin-inline: auto;
   line-height: 1.4;
+  letter-spacing: 0.02rem;
 }
